widget: Fix display glitches around hidden underline

https://bugzilla.gnome.org/show_bug.cgi?id=791303